added loader to change user data form & fix redirect in delete owner

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Frame.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google" content="notranslate">
+
+    <meta name="title" content="Rentary - Gestión de alquileres simplificada" />
+    <meta name="description" content="Rentary te ayuda a administrar propiedades, inquilinos y contratos de forma eficiente y segura." />
+    <meta name="keywords" content="alquileres, propiedades, gestión inmobiliaria, rentas, contratos, inquilinos, propietarios" />
+    <meta name="author" content="Rentary Team" />
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://foo-talent.vercel.app/" />
+    <meta property="og:title" content="Rentary - Gestión de alquileres simplificada" />
+    <meta property="og:description" content="Administra fácilmente tus propiedades, contratos y rentas con Rentary." />
+    <meta property="og:image" content="https://foo-talent.vercel.app/og-image.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://foo-talent.vercel.app/" />
+    <meta property="twitter:title" content="Rentary - Gestión de alquileres simplificada" />
+    <meta property="twitter:description" content="Administra fácilmente tus propiedades, contratos y rentas con Rentary." />
+    <meta property="twitter:image" content="https://foo-talent.vercel.app/og-image.jpg" />
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
     <title>Rentary</title>
   </head>
   <body>
